--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </header>
 
 <main>
-  <section class="map map--faded">
+  <section class="map">
     <div class="map__pins">
       <div class="map__pinsoverlay"><h2>И снова Токио!</h2></div>
 
@@ -218,7 +218,7 @@
   </div>
 </footer>
 
-<template>
+<template id="map-elements-template">
   <article class="map__card popup">
     <img src="img/avatars/user01.png" class="popup__avatar" width="70" height="70">
     <button class="popup__close">Закрыть</button>
@@ -244,6 +244,8 @@
 
   <button style="left: 200px; top: 400px;" class="map__pin"><img src="img/avatars/user07.png" width="40" height="40" draggable="false"></button>
 </template>
+
+<script src="js/map.js"></script>
 
 </body>
 </html>
