--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="notice">
     <h2 class="notice__title">Ваше объявление</h2>
 
-    <form class="notice__form notice__form--disabled" method="post" enctype="multipart/form-data" autocomplete="off">
+    <form class="notice__form notice__form--disabled" action='https://js.dump.academy/keksobooking' method="post" enctype="multipart/form-data" autocomplete="off">
       <fieldset disabled class="notice__header">
         <legend>Ваша фотография (для карты)</legend>
         <div class="notice__photo">
@@ -102,17 +102,17 @@
 
       <fieldset disabled class="form__element form__element--wide">
         <label for="title">Заголовок объявления</label>
-        <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио">
+        <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио" required minlength="30" maxlength="100">
       </fieldset>
 
       <fieldset disabled class="form__element form__element--wide">
         <label for="address">Адрес</label>
-        <input id="address" name="address" type="text">
+        <input id="address" name="address" type="text" readonly required>
       </fieldset>
 
       <fieldset disabled class="form__element">
         <label for="type">Тип жилья</label>
-        <select id="type" name="type">
+        <select class="associated-control" id="type" name="type">
           <option value="flat" selected>Квартира</option>
           <option value="bungalo">Лачуга</option>
           <option value="house">Дом</option>
@@ -122,17 +122,17 @@
 
       <fieldset disabled class="form__element">
         <label for="price">Цена за ночь, руб.</label>
-        <input id="price" name="price" type="number" placeholder="5000">
+        <input class="associated-control" id="price" name="price" type="number" placeholder="5000" required value="1000" maxlength="1000000" minlength="0">
       </fieldset>
 
       <fieldset disabled class="form__element">
         <label for="timein">Время заезда и выезда</label>
-        <select id="timein" name="timein">
+        <select class="associated-control" id="timein" name="timein">
           <option value="12:00" selected>После 12</option>
           <option value="13:00">После 13</option>
           <option value="14:00">После 14</option>
         </select>
-        <select id="timeout" name="timeout" title="Time to go out">
+        <select class="associated-control" id="timeout" name="timeout" title="Time to go out">
           <option value="12:00" selected>Выезд до 12</option>
           <option value="13:00">Выезд до 13</option>
           <option value="14:00">Выезд до 14</option>
@@ -141,7 +141,7 @@
 
       <fieldset disabled class="form__element">
         <label for="room_number">Кол-во комнат</label>
-        <select id="room_number" name="rooms">
+        <select class="associated-control" id="room_number" name="rooms">
           <option value="1" selected>1 комната</option>
           <option value="2">2 комнаты</option>
           <option value="3">3 комнаты</option>
@@ -151,7 +151,7 @@
 
       <fieldset disabled class="form__element">
         <label for="capacity">Количество мест</label>
-        <select id="capacity" name="capacity">
+        <select class="associated-control" id="capacity" name="capacity">
           <option value="3" selected>для 3 гостей</option>
           <option value="2">для 2 гостей</option>
           <option value="1">для 1 гостя</option>
