--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <fieldset disabled class="form__element form__element--wide">
         <label for="address">Адрес</label>
-        <input id="address" name="address" type="text" readonly required>
+        <input id="address" name="address" type="text" required>
       </fieldset>
 
       <fieldset disabled class="form__element">
@@ -152,9 +152,9 @@
       <fieldset disabled class="form__element">
         <label for="capacity">Количество мест</label>
         <select class="associated-control" id="capacity" name="capacity">
-          <option value="3" selected>для 3 гостей</option>
+          <option value="3">для 3 гостей</option>
           <option value="2">для 2 гостей</option>
-          <option value="1">для 1 гостя</option>
+          <option value="1" selected>для 1 гостя</option>
           <option value="0">не для гостей</option>
         </select>
       </fieldset>
