add one more statments

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
       <fieldset disabled class="form__element">
         <label for="capacity">Количество мест</label>
-        <select class="associated-control" id="capacity" name="capacity">
+        <select id="capacity" name="capacity" class="capacity">
           <option value="3">для 3 гостей</option>
           <option value="2">для 2 гостей</option>
           <option value="1" selected>для 1 гостя</option>
