Add drag handler

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <fieldset disabled class="form__element form__element--wide">
         <label for="address">Адрес</label>
-        <input id="address" name="address" type="text" required>
+        <input id="address" name="address" type="text" required readonly>
       </fieldset>
 
       <fieldset disabled class="form__element">
