--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
 </template>
 
 <script src="js/data.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/util.js"></script>
 <script src="js/card.js"></script>
 <script src="js/pin.js"></script>
