--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
   </div>
 </main>
 
+<div class="notification"></div>
+
 <footer class="footer container">
   <div class="center-wrapper">
     <section class="footer-logo">
@@ -245,7 +247,6 @@
   <button style="left: 200px; top: 400px;" class="map__pin"><img src="img/avatars/user07.png" width="40" height="40" draggable="false"></button>
 </template>
 
-<script src="js/data.js"></script>
 <script src="js/backend.js"></script>
 <script src="js/util.js"></script>
 <script src="js/card.js"></script>
