--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <option value="2">Два гостя</option>
         </select>
 
-        <fieldset disabled id="housing-features" class="map__filter-set features">
+        <fieldset id="housing-features" class="map__filter-set features">
           <input type="checkbox" name="features" value="wifi" id="filter-wifi">
           <label class="feature feature--wifi" for="filter-wifi">Wi-Fi</label>
 
@@ -247,6 +247,7 @@
 
 <script src="js/backend.js"></script>
 <script src="js/util.js"></script>
+<script src="js/handlers.js"></script>
 <script src="js/card.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/synchronize-fields.js"></script>
