--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 <script src="js/handlers.js"></script>
 <script src="js/card.js"></script>
 <script src="js/pin.js"></script>
+<script src="js/drag.js"></script>
 <script src="js/synchronize-fields.js"></script>
 <script src="js/form.js"></script>
 <script src="js/show-card.js"></script>
