First part of fixes

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </ul>
     <p>Великолепная квартира-студия в центре Токио. Подходит как туристам, так и бизнесменам. Квартира полностью укомплектована и недавно отремонтирована.</p>
     <ul class="popup__pictures">
-      <li><img src=""></li>
+      <li class="popup__pictures-item"><img class="popup__pictures-image" src=""></li>
     </ul>
   </article>
 
@@ -246,7 +246,6 @@
 </template>
 
 <script src="js/backend.js"></script>
-<script src="js/util.js"></script>
 <script src="js/handlers.js"></script>
 <script src="js/card.js"></script>
 <script src="js/pin.js"></script>
