--- a/index.html
+++ b/index.html
@@ -246,13 +246,13 @@
 </template>
 
 <script src="js/backend.js"></script>
+<script src="js/constants.js"></script>
 <script src="js/handlers.js"></script>
 <script src="js/card.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/drag.js"></script>
 <script src="js/synchronize-fields.js"></script>
 <script src="js/form.js"></script>
-<script src="js/show-card.js"></script>
 <script src="js/map.js"></script>
 
 </body>
